--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -34,8 +34,7 @@
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_weight="1"
+        android:layout_marginTop="24dp"
         android:text="______"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -46,10 +45,10 @@
 
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_my_now"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="30dp"
+        android:layout_marginTop="70dp"
         android:layout_weight="0"
         android:text="나의 지금 순위는.."
         android:textAlignment="center"
@@ -72,7 +71,7 @@
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_my_now" />
 
 
     <TextView
@@ -86,7 +85,7 @@
         android:textColor="@color/black"
         android:textSize="28dp"
         app:layout_constraintStart_toEndOf="@+id/tv_my_rank"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_my_now" />
 
 
     <TextView
